--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
     padding: 5px;
 }
 
-.navbar {
+#navbar {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -101,30 +101,23 @@ i:hover {
     width: 50%;
 }
 
-.projects {
+#projects {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 10px;
     margin: 100px 10px;
 }
 
-.project {
-    box-sizing: border-box;
-}
-
 .project-img {
     width: 100%;
-    height: 350px;
-    
+    height: 350px; 
 }
 
 .project-img:hover {
     box-shadow: -3px -4px 81px -11px rgba(0,0,0,0.34);
 }
 
-.link {
-    text-align: center;
-}
+
 
 
 
