social links added

--- a/style.css
+++ b/style.css
@@ -75,6 +75,7 @@ h3 {
 }
 
 i {
+    color: black;
     padding: 10px;
 }
 
@@ -91,6 +92,7 @@ i:hover {
     top: 42%;
     left: 10px;
 }
+
 
 .right {
    text-align: right;
