--- a/style.css
+++ b/style.css
@@ -19,9 +19,12 @@ body {
 }
 
 #navbar {
+    position: fixed;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    width: 100%;
+    background-color: white;
 }
 
 .nav-items {
