image to the right and fixed hover in navbar

--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ body {
     align-items: center;
     width: 100%;
     background-color: white;
+    z-index: 2;
 }
 
 .nav-items {
@@ -38,7 +39,6 @@ body {
     color: black;
     margin-right: 30px;
     font-size: 1.5rem;
-    
 }
 
 .nav-item a:hover {
@@ -98,12 +98,15 @@ i:hover {
 
 
 .right {
-   text-align: right;
-    
+    display: flex;
+    justify-content: flex-end;
+    position: absolute;
+    right: 0;
 }
 
 .main-image {
-    width: 50%;
+    margin: 100px 0;
+    width: 100%;
 }
 
 #projects {
