--- a/style.css
+++ b/style.css
@@ -97,6 +97,10 @@ i:hover {
     left: 10px;
 }
 
+.fa-brands {
+    font-size: 2em;
+}
+
 
 .right {
     display: flex;
@@ -106,7 +110,7 @@ i:hover {
 }
 
 .main-image {
-    margin: 100px 0;
+    margin: 150px 0;
     width: 100%;
 }
 
@@ -126,8 +130,169 @@ i:hover {
     box-shadow: -3px -4px 81px -11px rgba(0,0,0,0.34);
 }
 
+@media (min-width: 1700px)
+{
+    h1 {
+        font-size: 3.5rem;
+    }
 
+    #name {
+        font-size: 8rem;
+    }
+     
+    .social-icons {
+        top: 47%;
+    }
 
+    .main-image {
+        margin: 150px 10px;
+    }
+}
+
+@media (max-width: 1500px) {
+    h1 {
+        font-size: 1.9rem;
+    }
+
+    #name {
+        font-size: 6rem;
+    }
+
+    h3 {
+        font-size: 1rem;
+    }
+
+    .main-image {
+        width: 80%;
+        margin: 150px 10px;
+    }
+}
+
+@media (max-width: 1200px) {
+    h1{
+        font-size: 1.5rem;
+    }
+
+    #name {
+        font-size: 4rem;
+    }
+
+    h3 {
+        font-size: 0.8rem;
+    }
+
+    .main-image {
+        width: 60%;
+    }
+
+    .fa-brands {
+        font-size: 1.5em;
+    }
+}
+
+@media (max-width: 900px) {
+    h1 {
+        font-size: 1.2rem;
+    }
+
+    #name {
+        font-size: 3rem;
+    }
+
+    h3 {
+        font-size: 0.6rem;
+    }
+
+    .main-image {
+        width: 50%;
+    }
+
+    .fa-brands {
+        font-size: 1rem;
+    }
+
+    .social-icons {
+        flex-direction: row;
+        top: 59%;
+        left: 63px;
+        z-index: 2;
+    }
+
+    .nav-item a{ 
+        font-size: 1rem;
+    }
+}
+
+@media (max-width: 600px) {
+    .right {
+        justify-content: center;
+    }
+
+    .main-image {
+        margin: 80px 0;
+    }
+    #welcome-section {
+        top: 45%;
+        left: 30%;
+        text-align: center;
+    }
+
+    .social-icons {
+        top: 60%;
+        left: 40%;
+    }
+
+}
+
+@media (max-width: 540px) {
+    h1 {
+        font-size: 1rem;
+    }
+
+    #name {
+        font-size: 2rem;
+    }
+
+    .main-image {
+        width: 50%;
+    }
+
+    #welcome-section {
+        top: 40%;
+        left: 25%;
+    }
+
+    .social-icons {
+        top: 52%;
+        left: 29%;
+    }
+}
+
+@media (max-width: 400px) {
+    #navbar {
+        flex-direction: column;
+    }
+
+    .nav-items {
+        flex-direction: column;
+    }
+    
+    .nav-items a {
+        margin: 0;
+    }
+    
+    .right {
+        margin-top:  80px;
+    }
+
+    #welcome-section {
+        top: 50%;
+    }
+
+    .social-icons {
+        top: 62%;
+    }
+}
 
 
 
