fixed the hover in navbar

--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ body {
     background-image: linear-gradient(to right, #BF59A2, #00409A);
     background-clip: text;
     -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
 }
 
 .main {
